[gd_scene load_steps=51 format=2]

[ext_resource path="res://sprites/Martial Hero/Sprites/Attack2.png" type="Texture" id=1]
[ext_resource path="res://sprites/Martial Hero/Sprites/Attack1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Martial Hero/Sprites/Death.png" type="Texture" id=3]
[ext_resource path="res://sprites/Martial Hero/Sprites/Jump.png" type="Texture" id=4]
[ext_resource path="res://sprites/Martial Hero/Sprites/Take Hit - white silhouette.png" type="Texture" id=5]
[ext_resource path="res://sprites/Martial Hero/Sprites/Idle.png" type="Texture" id=6]
[ext_resource path="res://sprites/Martial Hero/Sprites/Fall.png" type="Texture" id=7]
[ext_resource path="res://skrypty/Player.gd" type="Script" id=8]
[ext_resource path="res://sprites/Martial Hero/Sprites/Run.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=41]
radius = 11.6248
height = 26.7449

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 1200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 1400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 9 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 9 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 9 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 9 )
region = Rect2( 1200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 9 )
region = Rect2( 1400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "Take Hit",
"speed": 20.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": false,
"name": "Attack2",
"speed": 7.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": false,
"name": "Attack1",
"speed": 10.0
} ]

[node name="KinematicBody2D" type="KinematicBody2D"]
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.19054, -2.97638 )
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 41 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.86441, 0 )
scale = Vector2( 1.3, 1.3 )
frames = SubResource( 40 )
animation = "Fall"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.19054, -2.97638 )
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 41 )

[node name="qAttack" type="Area2D" parent="." groups=[
"1dmg",
"Sword",
]]
position = Vector2( 0.86441, 0 )

[node name="qAttack" type="CollisionPolygon2D" parent="qAttack"]
build_mode = 1
polygon = PoolVector2Array( -9.59801, -58.5081, 80.0502, -50.9971, 111.791, -23.618, 78.1119, 13.2105, 20.9327, 15.6805, 20.6368, -7.10059, 12.3528, -26.0355, 0.831833, -28.6954 )
disabled = true

[node name="pAttack" type="Area2D" parent="." groups=[
"5dmg",
]]

[node name="pAttack" type="CollisionPolygon2D" parent="pAttack"]
position = Vector2( 0.86441, 0 )
scale = Vector2( 1.3, 1.3 )
polygon = PoolVector2Array( 58.6432, -29.272, 35.5061, -27.5305, 21.3253, -10.8618, -12.012, -17.579, -17.9829, -6.13487, 26.301, 17.251, 84.7657, 5.80685, 93.4732, -12.1057, 75.3118, -27.2817 )
disabled = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
